# aob-rs

./: .editorconfig  .gitattributes  Cargo.toml  README  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: cargo_deny.yml  deploy_docs.yml  main_ci.yml
aob/: all.html  enum.Method.html  enum.Reason.html  index.html  macro.aob!.html  macro.aob.html  sidebar-items.js  struct.DynamicNeedle.html  struct.Error.html  struct.Find.html  struct.Match.html  struct.StaticNeedle.html  trait.Needle.html
aob_common/: all.html  enum.Method.html  enum.Reason.html  index.html  sidebar-items.js  struct.DynamicNeedle.html  struct.Error.html  struct.Find.html  struct.Match.html  struct.StaticNeedle.html  trait.Needle.html
aob_common/error/: enum.Reason.html  struct.Error.html
aob_common/needle/: struct.DynamicNeedle.html  struct.Find.html  struct.Match.html  struct.StaticNeedle.html  trait.Needle.html
aob_common/pattern/: enum.Method.html
aob_macros/: all.html  index.html  macro.aob.html  sidebar-items.js
crates/aob/: Cargo.toml
crates/aob/src/: lib.rs  the_raven.txt
crates/aob_common/: Cargo.toml
crates/aob_common/benches/: benchmark.rs  moby_dick.txt
crates/aob_common/src/: error.rs  lib.rs  needle.rs  parsing.rs  pattern.rs  prefilter.rs  slice.rs
crates/aob_macros/: Cargo.toml
crates/aob_macros/src/: lib.rs
data/: LICENSE
search.desc/aob/: aob-desc-0-.js
search.desc/aob_common/: aob_common-desc-0-.js
search.desc/aob_macros/: aob_macros-desc-0-.js
src/aob/: lib.rs.html
src/aob_common/: error.rs.html  lib.rs.html  needle.rs.html  parsing.rs.html  pattern.rs.html  prefilter.rs.html  slice.rs.html
src/aob_macros/: lib.rs.html
trait.impl/aob_common/needle/: trait.Needle.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/iter/traits/iterator/: trait.Iterator.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
