[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
include = [
  "src/*.rs",
  "LICENSE",
]
keywords.workspace = true
license.workspace = true
name = "aob"
readme.workspace = true
repository.workspace = true
version = "1.0.2"

[dependencies]
aob_common = {version = "1.0.2", path = "../aob_common"}
aob_macros = {version = "1.0.2", path = "../aob_macros"}
