[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
include = [
  "src/*.rs",
  "LICENSE",
]
keywords.workspace = true
license.workspace = true
name = "aob_common"
readme.workspace = true
repository.workspace = true
version = "1.0.0"

[dependencies]
chumsky = {version = "0.9.3", default-features = false}
memchr = {version = "2.7.4", default-features = false}

[dev-dependencies]
aob_common = {path = "../aob_common"}
criterion = "0.5.1"

[[bench]]
harness = false
name = "benchmark"
